--- a/customviews/build.gradle
+++ b/customviews/build.gradle
@@ -41,6 +41,13 @@ android {
 dependencies {
     def lifecycle_version = "2.2.0"
     def okHttp3_version = '3.12.1'
+    def room_version = "2.2.6"
+
+    //Room
+    // Room DB
+    api "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    api "androidx.room:room-ktx:$room_version"
 
     // https://stackoverflow.com/a/48443958/7698605
     //Retrofit
